--- a/devon_site/templates/devon/cs.html
+++ b/devon_site/templates/devon/cs.html
@@ -52,9 +52,10 @@
 			</h1>
 			<p>
 				This page is dedicated to new technologies and what has been going on in the world of tech.
+				
 			</p>
 			
-			
+			<img src="{% static "Devon.jpg" %}" alt="Picture" />
 		</div>
 	</div>
 	
