--- a/devon_site/templates/devon/journal.html
+++ b/devon_site/templates/devon/journal.html
@@ -13,8 +13,8 @@
 		<h1>
 			Devon Dominique Rusconi
 		</h1>
-		
-		
+
+
 	</div>
 	<div id="menu">
 		<h3>
@@ -39,11 +39,11 @@
 			GitHub: <li><a href="https://github.com/DRusconi-CSUMB">GitHub</a></li>
 			YouTube: <li><a href="https://www.youtube.com/user/RusconiRecordings/">YouTube</a></li>
 			Professional Email: <li><a href="https://mail.google.com/">drusconi@csumb.edu</a></li>
-			
+
 		</ul>
-		
+
  	</div>
-	
+
 	<div id="contents">
 		<div class="blogentry">
 			<h1>
@@ -51,41 +51,82 @@
 			</h1>
 			
 			<h2>
+				Something About Me
+			</h2>
+			<p>
+				Hello! Welcome to my blog. Here I will be documenting the achievements, opportunities, events, and interesting subjects. 
+				So a little bit about me...
+				
+				I have been selected in a highly selective three year computer science bachelors program called the CSIT-in-3.
+			</p>
+
+			<h2>
 				My First Django App
 			</h2>
 			<p>
-				This website has been created all in Python with a framework called Django. I worked twelve straight hours on it and was so excited when I finally saw the first webpage
-				show up on my browser. Using the command prompt to access the files and run the server
+				This website has been created all in Python with a framework called Django. I worked twelve straight hours on it and was so excited when I finally saw the first web page
+				show up on my browser. Using the command prompt to access the files and running the server I found it easy to follow the Django tutorial to create
+				this website.
+
+				I used PythonAnywhere to deploy the site. It is easy to use and free to use as well. I had some help from a classmate of mine, Daniel, (who also has
+				his own website here). Getting it on the server was difficult and we had to keep track of the bugs that we ran into in order not to make the same errors.
+				After figuring out how to fix the problems, it was so relieving to click on the link and see the website for everyone to visit.
 			</p>
 			<h2>
-				Internship Opportunities 
+    			The Grace Hopper Conference 2014
 			</h2>
 			<p>
-				During the Grace 
+				During the month of October on the 7th - 10th, all the women in the CSIT-in-3 program got to go to the Grace Hopper Conference in Phoenix, Arizona. That week
+				was one of the most inspiring weeks of my professional career. Being a student at Hartnell College, the students enrolled in CSIT-in-3 are 50% female.
+				We didn't realize the problem with diversity in the computer science field. Going to this conference, I felt empowered. 
+				Women were inspiring others with their stories and achievements in technology. The stories they spoke at the conference were amazing and they wanted to have
+				every woman in the room and every woman attending the conference to not let any obstacle stop them from their goals. 
 			</p>
 			
+			<p>
+				I attended many workshops that taught about networking, computing on the cloud, wearable technology, and so much more. One workshop that stood out for me
+				was the Student Opportunities Lab which had over 60 tables in one room with different subjects like "preparing for technical interviews", or "polishing your
+				linkedin profile", or "which internship should I choose?". I learned a lot in these workshops and brought back many handouts and informational papers.
+		
+			</p>
+
 			<h2>
-				The Grace Hopper Conference in Pheonix Arrizona
+				Internship Opportunities
 			</h2>
 			<p>
-				so much fun because...
-			</p> 
+				In the CSIT-in-3 program, the summer coming up is going to be different than the last. Instead of taking classes, we will now be interning at
+				companies looking for dedicated and talented computer scientists. 
+				
+				Here are some links to internships that I was provided with. I am searching through to find the company that I can most likely connect with 
+				and that I can do my best at.
+				
+				<h3>
+				Search for a summer Internship:
+				</h3>
+				
+				
+				
+			</p>
 			<h2>
 				Tutorial Videos
 			</h2>
 			<p>
-				they are amazing because....
-			</p> 
-			<h2>
-				Something About Me
-			</h2>
-			<p>
-				well..
-			</p> 
+				I started my own YouTube channel last summer with a group of my friends. It was just something fun we can all do before we head back to our universities.
+				The videos were mostly for fun and they received a lot of views. The more views a video got, the more I realized that we weren't the only ones being
+				entertained.
+				
+				Going back to school I soon realized that I shouldn't stop my YouTube channel, I was going to keep doing it, but for different reasons. They aren't going
+				to be fun silly videos with my friends, but merely videos that can help me study and help me remember certain steps when programming. I created my first 
+				Tutorial video that is now almost at 500 views. I then did a second video which is almost at 200 views. These videos can be found on the tutorial tab of this
+				website and also on my YouTube channel linked above.
+				
+				I am happy people are learning from me as I learned from others. It is easy to study, but to take that information and communicate it to others can be a bit more 
+				difficult. 
+			</p>
 			
 		</div>
 	</div>
-	
+
 	<div id="footer">
 		Copyright © Rusconi 2014
 	</div>
@@ -106,9 +147,9 @@ body
 	background: white;
 }
 
-#header 
-{ 
-	background: pink; 
+#header
+{
+	background: pink;
 	width: 200;
 
 }
